--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Begroeting voor Thijs</title>
+</head>
+<body>
+
+    <h1>Hallo Thijs!</h1>
+    <p>Welkom op deze eenvoudige HTML-pagina. We begroeten je hartelijk!</p>
+
+</body>
+</html>
 
